text-wrap: pretty to avoid a slightly embarassing widow on one headline

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,15 @@ article {
    font-size: 1.25rem;
    margin: 0 auto;
 
+   h1 {
+      text-wrap: pretty;
+   }
+
+   blockquote {
+      text-wrap: pretty;
+      font-style: italic;
+   }
+
    figure {
 
       img {
